mise a jour de la documentation swagger
